cmake_minimum_required(VERSION 3.17)
project(Lab6)

set(CMAKE_CXX_STANDARD 17)

add_executable(problem_1 problem_1.cpp)
add_executable(problem_2 problem_2.cpp)
add_executable(problem_3 problem_3.cpp)
add_executable(problem_4 problem_4.cpp)
add_executable(problem_5 problem_5.cpp)
add_executable(problem_6 problem_6.cpp)